# CricketLiveScore-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
ansible/: .gitignore  ansible.cfg  deploy.yml
ansible/templates/: cricket-backend.service.j2  nginx-cricket.conf.j2
src/: api.rs  main.rs  models.rs  pubsub.rs  redis_client.rs  websocket.rs
